# serializer version: 1
# name: test_pixi_add_alias
  '''
  
  [workspace]
  name = "test"
  channels = []
  platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
  
  [tasks]
  dummy-a = [{ task = "dummy-b" }, { task = "dummy-c" }]
  
  [target.linux-64.tasks]
  linux-alias = [{ task = "dummy-b" }, { task = "dummy-c" }]
  
  '''
# ---
# name: test_pixi_add_task
  '''
  
  [workspace]
  name = "test"
  channels = []
  platforms = ["linux-64", "win-64", "osx-64", "osx-arm64"]
  
  [tasks]
  test = { cmd = "echo 'Hello {{name | title}}'", args = ["name"] }
  test-alias = [{ task = "test" }]
  
  '''
# ---
# name: test_pixi_task_list_json
  list([
    dict({
      'environment': 'default',
      'features': list([
        dict({
          'name': 'default',
          'tasks': list([
            dict({
              'args': list([
                dict({
                  'default': 'World',
                  'name': 'name',
                }),
              ]),
              'clean_env': False,
              'cmd': "echo 'Hello {{name | title}}'",
              'cwd': None,
              'depends_on': list([
              ]),
              'description': None,
              'env': None,
              'inputs': None,
              'name': 'test-task',
              'outputs': None,
            }),
          ]),
        }),
      ]),
    }),
  ])
# ---
